--- a/app/src/main/res/layout/activity_no.xml
+++ b/app/src/main/res/layout/activity_no.xml
@@ -48,6 +48,7 @@
 
                 <android.support.design.widget.TabLayout
                     android:layout_width="match_parent"
+                    android:id="@+id/tabno"
                     android:layout_height="wrap_content"
                     app:tabRippleColor="@color/primary"
                     app:tabSelectedTextColor="@color/primary"
