Versión 1.013 12052019 11:07 am, se actualizó la activity_no agregando sus fragments.

--- a/app/src/main/res/layout/activity_cd.xml
+++ b/app/src/main/res/layout/activity_cd.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="com.codigo55.umovil.activity_cd">
+    tools:context="com.codigo55.umovil.activitys.activity_cd">
 
     <!--Inicio toolbar 1-->
 
