--- a/app/src/main/res/layout/activity_fm.xml
+++ b/app/src/main/res/layout/activity_fm.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="com.codigo55.umovil.activity_fm">
+    tools:context="com.codigo55.umovil.activitys.activity_fm">
 
     <!--Inicio toolbar 1-->
 
