--- a/app/src/main/res/layout/activity_no.xml
+++ b/app/src/main/res/layout/activity_no.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="com.codigo55.umovil.activity_no">
+    tools:context="com.codigo55.umovil.activitys.activity_no">
 
     <!--Inicio toolbar 1-->
 
@@ -36,44 +36,26 @@
             android:layout_gravity="center"
             android:background="@drawable/iv_dashboard" />
 
-        <ScrollView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
-            <LinearLayout
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingTop="10dp">
+                android:background="?attr/colorPrimary"
+                android:elevation="8dp"
+                android:minHeight="?attr/actionBarSize"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-                <android.support.design.widget.TabLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:tabRippleColor="@color/primary"
-                    app:tabSelectedTextColor="@color/primary"
-                    app:tabIndicatorColor="@color/primary"
-                    >
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewPager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/tabLayout" />
 
-                    <android.support.design.widget.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/tips" />
-
-                    <android.support.design.widget.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/generales" />
-
-                    <android.support.design.widget.TabItem
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/entretenimiento" />
-
-                </android.support.design.widget.TabLayout>
-
-            </LinearLayout>
-
-        </ScrollView>
+        </RelativeLayout>
 
     </android.support.v7.widget.LinearLayoutCompat>
 
