Versión 1.014 13052019 19:32 pm, se actualizó la activity_no agregando los blogs y sus funcionalidades.

--- a/app/src/main/res/layout/activity_no.xml
+++ b/app/src/main/res/layout/activity_no.xml
@@ -30,11 +30,11 @@
         android:layout_below="@id/toolbar"
         android:orientation="vertical">
 
-        <TextView
+<!--        <TextView
             android:layout_width="300dp"
             android:layout_height="160dp"
             android:layout_gravity="center"
-            android:background="@drawable/iv_dashboard" />
+            android:background="@drawable/iv_dashboard" />-->
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -44,7 +44,9 @@
                 android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?attr/colorPrimary"
+                android:background="?attr/colorAccent"
+                app:tabSelectedTextColor="@color/primary"
+                app:tabIndicatorColor="@color/primary"
                 android:elevation="8dp"
                 android:minHeight="?attr/actionBarSize"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
