--- a/app/src/main/res/layout/activity_ci.xml
+++ b/app/src/main/res/layout/activity_ci.xml
@@ -85,6 +85,30 @@
 
                 </LinearLayout>
 
+                <!--Bloque prueba-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="40dp"
+                    android:background="@color/white"
+                    android:baselineAligned="false"
+                    android:elevation="6dp"
+                    android:orientation="vertical">
+
+                    <WebView
+                        android:id="@+id/webView1"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_marginBottom="10dp" />
+
+                    <WebView
+                        android:id="@+id/webView2"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_marginBottom="10dp" />
+
+                </LinearLayout>
+
             </LinearLayout>
 
         </ScrollView>
