--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="icons">#212121</color>
     <color name="divider">#FFA000</color>
     <color name="white">#fff</color>
+    <color name="ic_launcher_background">#FDFDFD</color>
 </resources>
