--- a/app/src/main/res/layout/activity_cd.xml
+++ b/app/src/main/res/layout/activity_cd.xml
@@ -31,8 +31,8 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="300dp"
-            android:layout_height="160dp"
+            android:layout_width="@dimen/iv_width"
+            android:layout_height="@dimen/iv_height"
             android:layout_gravity="center"
             android:background="@drawable/iv_dashboard" />
 
@@ -45,9 +45,9 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:orientation="vertical"
-                android:paddingLeft="40dp"
+                android:paddingLeft="@dimen/padding_hor_scroll"
                 android:paddingTop="10dp"
-                android:paddingRight="40dp">
+                android:paddingRight="@dimen/padding_hor_scroll">
 
                 <!--Bloque 1-->
                 <LinearLayout
