--- a/app/src/main/res/layout/activity_ci.xml
+++ b/app/src/main/res/layout/activity_ci.xml
@@ -41,63 +41,10 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="300dp"
-                    android:layout_height="160dp"
+                    android:layout_width="@dimen/iv_width"
+                    android:layout_height="@dimen/iv_height"
                     android:layout_gravity="center"
                     android:background="@drawable/iv_dashboard" />
-
-                <!--Division texto videos-->
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@color/accent"
-                    android:baselineAligned="false"
-                    android:elevation="8dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:text="@string/vd"
-                        android:textColor="@color/white"
-                        android:textSize="18sp"
-                        android:textStyle="bold"/>
-
-                </LinearLayout>
-
-                <!--Bloque de videos-->
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/white"
-                    android:baselineAligned="false"
-                    android:orientation="vertical"
-                    android:paddingLeft="40dp"
-                    android:paddingRight="40dp">
-
-                    <WebView
-                        android:id="@+id/webView1"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:layout_marginBottom="10dp" />
-
-                    <WebView
-                        android:id="@+id/webView2"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:layout_marginBottom="10dp" />
-
-                    <WebView
-                        android:id="@+id/webView3"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:layout_marginBottom="10dp" />
-
-                </LinearLayout>
 
                 <!--Division texto Tips-->
 
@@ -118,6 +65,165 @@
                         android:textColor="@color/white"
                         android:textSize="18sp"
                         android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <!--Tips 1-->
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/padding_hor_scroll"
+                    android:layout_marginLeft="@dimen/padding_hor_scroll"
+                    android:layout_marginBottom="@dimen/mar_bott"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="@dimen/tip_iv"
+                        android:layout_height="@dimen/tip_iv"
+                        android:background="@color/primary"
+                        android:padding="5dp"
+                        android:src="@drawable/ic_v_idea"
+                        android:contentDescription="@string/todo">
+                    </ImageView>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/primary_light"
+                            android:gravity="start"
+                            android:padding="@dimen/tip_padding"
+                            android:text="@string/tip_ci_1"
+                            android:textColor="@color/primary_text"
+                            android:textSize="@dimen/tip_text_size" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <!--Tips 2-->
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/padding_hor_scroll"
+                    android:layout_marginLeft="@dimen/padding_hor_scroll"
+                    android:layout_marginBottom="@dimen/mar_bott"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="@dimen/tip_iv"
+                        android:layout_height="@dimen/tip_iv"
+                        android:background="@color/primary"
+                        android:padding="5dp"
+                        android:src="@drawable/ic_v_idea"
+                        android:contentDescription="@string/todo"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/primary_light"
+                            android:gravity="start"
+                            android:padding="@dimen/tip_padding"
+                            android:text="@string/tip_ci_2"
+                            android:textColor="@color/primary_text"
+                            android:textSize="@dimen/tip_text_size" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <!--Tips 3-->
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/padding_hor_scroll"
+                    android:layout_marginLeft="@dimen/padding_hor_scroll"
+                    android:layout_marginBottom="@dimen/mar_bott"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="@dimen/tip_iv"
+                        android:layout_height="@dimen/tip_iv"
+                        android:background="@color/primary"
+                        android:padding="5dp"
+                        android:src="@drawable/ic_v_idea"
+                        android:contentDescription="@string/todo" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/primary_light"
+                            android:gravity="start"
+                            android:padding="@dimen/tip_padding"
+                            android:text="@string/tip_ci_3"
+                            android:textColor="@color/primary_text"
+                            android:textSize="@dimen/tip_text_size" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <!--Division texto videos-->
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="@color/accent"
+                    android:baselineAligned="false"
+                    android:elevation="8dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="@string/vd"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <!--Bloque de videos-->
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/white"
+                    android:baselineAligned="false"
+                    android:orientation="vertical"
+                    android:paddingLeft="@dimen/padding_hor_scroll"
+                    android:paddingRight="@dimen/padding_hor_scroll">
+
+                    <WebView
+                        android:id="@+id/webView1"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_marginBottom="@dimen/mar_bott" />
+
+                    <WebView
+                        android:id="@+id/webView2"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_marginBottom="@dimen/mar_bott" />
+
+                    <WebView
+                        android:id="@+id/webView3"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_marginBottom="@dimen/mar_bott" />
 
                 </LinearLayout>
 
@@ -142,6 +248,10 @@
                         android:textStyle="bold" />
 
                 </LinearLayout>
+
+                <!--Vista de documentos-->
+
+
 
             </LinearLayout>
 
