--- a/app/src/main/res/layout/activity_ii.xml
+++ b/app/src/main/res/layout/activity_ii.xml
@@ -30,11 +30,10 @@
         android:layout_below="@id/toolbar"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="300dp"
-            android:layout_height="160dp"
-            android:layout_gravity="center"
-            android:background="@drawable/iv_dashboard" />
+        <com.github.barteksc.pdfviewer.PDFView
+            android:id="@+id/pdfView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     </android.support.v7.widget.LinearLayoutCompat>
 
