--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codigo55.umovil.activitys.MainActivity"
-    >
+    tools:context="com.codigo55.umovil.activitys.MainActivity">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white">
 
-
-        // Inicio Tolbar
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -25,8 +22,8 @@
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:title="@string/titulo"
             app:titleMarginStart="0dp">
+
         </android.support.v7.widget.Toolbar>
-        //Fin Toolbar
 
         <android.support.v7.widget.LinearLayoutCompat
             android:layout_width="match_parent"
@@ -36,13 +33,10 @@
             android:orientation="vertical">
 
             <TextView
-                android:layout_width="300dp"
-                android:layout_height="160dp"
+                android:layout_width="@dimen/iv_width"
+                android:layout_height="@dimen/iv_height"
                 android:layout_gravity="center"
-                android:background="@drawable/iv_dashboard"
-
-
-                />
+                android:background="@drawable/iv_dashboard" />
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -52,9 +46,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:paddingLeft="40dp"
+                    android:paddingLeft="@dimen/padding_hor_scroll"
                     android:paddingTop="10dp"
-                    android:paddingRight="40dp">
+                    android:paddingRight="@dimen/padding_hor_scroll">
 
                     <!--Bloque 1-->
                     <LinearLayout
@@ -69,7 +63,7 @@
 
                         <LinearLayout
                             android:layout_width="0dp"
-                            android:layout_height="160dp"
+                            android:layout_height="@dimen/bloque_height"
                             android:layout_weight="1"
                             android:background="@drawable/iv_ii"
                             android:onClick="next_ii"
@@ -106,7 +100,7 @@
 
                         <LinearLayout
                             android:layout_width="0dp"
-                            android:layout_height="160dp"
+                            android:layout_height="@dimen/bloque_height"
                             android:layout_weight="1"
                             android:background="@drawable/iv_is"
                             android:orientation="vertical">
@@ -143,7 +137,7 @@
 
                         <LinearLayout
                             android:layout_width="0dp"
-                            android:layout_height="160dp"
+                            android:layout_height="@dimen/bloque_height"
                             android:layout_weight="1"
                             android:background="@drawable/iv_no"
                             android:orientation="vertical">
@@ -167,98 +161,31 @@
 
                     </LinearLayout>
 
-                    <!--            Bloque 3
-                                    <LinearLayout
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginBottom="20dp"
-                                        android:background="#fff"
-                                        android:baselineAligned="false"
-                                        android:elevation="6dp"
-                                        android:orientation="horizontal"
-                                        android:weightSum="1">
-
-                                        <LinearLayout
-                                            android:layout_width="0dp"
-                                            android:layout_height="160dp"
-                                            android:layout_weight="1"
-                                            android:background="@color/primary"
-                                            android:orientation="vertical">
-
-                                            <TextView
-                                                android:layout_width="match_parent"
-                                                android:layout_height="match_parent"
-                                                android:gravity="center"
-                                                android:text="@string/ii"
-                                                android:textSize="16sp" />
-
-                                        </LinearLayout>
-
-                                    </LinearLayout>
-
-                                     Bloque 4
-                                    <LinearLayout
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginBottom="20dp"
-                                        android:background="#fff"
-                                        android:baselineAligned="false"
-                                        android:elevation="6dp"
-                                        android:orientation="horizontal"
-                                        android:weightSum="1">
-
-                                        <LinearLayout
-                                            android:layout_width="0dp"
-                                            android:layout_height="160dp"
-                                            android:layout_weight="1"
-                                            android:background="@color/primary"
-                                            android:orientation="vertical">
-
-                                            <TextView
-                                                android:layout_width="match_parent"
-                                                android:layout_height="match_parent"
-                                                android:gravity="center"
-                                                android:text="@string/ii"
-                                                android:textSize="16sp" />
-
-                                        </LinearLayout>
-
-                                    </LinearLayout>-->
-
                 </LinearLayout>
 
             </ScrollView>
 
         </android.support.v7.widget.LinearLayoutCompat>
 
-        //fragments de opciones de menu
         <FrameLayout
             android:id="@+id/content_frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="0dp">
-
         </FrameLayout>
-
-
 
     </RelativeLayout>
 
-
-// navegacion menu desplegable
     <android.support.design.widget.NavigationView
         android:id="@+id/navview"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:headerLayout="@layout/header_navigation_drawer"
-        app:menu="@menu/nav_options"
         android:background="@color/white"
-        >
+        app:headerLayout="@layout/header_navigation_drawer"
+        app:menu="@menu/nav_options">
 
     </android.support.design.widget.NavigationView>
-
-
 
 </android.support.v4.widget.DrawerLayout>
